Update maintenance message and title in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Down for Maintenance</title>
+  <title>Goats Media Maintenance</title>
   <style>
     body {
       margin: 0;
@@ -21,11 +21,13 @@
     h1 {
       font-size: 3rem;
       margin-bottom: 1rem;
+      color: #4caf50;
     }
     p {
       font-size: 1.2rem;
-      max-width: 500px;
+      max-width: 600px;
       line-height: 1.5;
+      margin-bottom: 1rem;
     }
     .spinner {
       margin-top: 2rem;
@@ -43,8 +45,12 @@
 </head>
 <body>
 
-  <h1>Down for Maintenance</h1>
-  <p>We are performing scheduled updates. The site will be back shortly. Thanks for your patience.</p>
+  <h1>Goats Media</h1>
+  <p>We are currently transferring the site to new hardware. Better stability, same Goats.</p>
+  <p>If you need anything or have a content request, hop into our Discord general channel.</p>
+  <p>If you are not in the Discord yet, well, you should have joined.</p>
+  <p>  -Goats</p>
+
   <div class="spinner"></div>
 
 </body>
