Revise site message for hardware migration
Updated site message during hardware transfer with new information and a temporary link.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       line-height: 1.5;
       margin-bottom: 1rem;
     }
+    a {
+      color: #4caf50;
+    }
     .spinner {
       margin-top: 2rem;
       width: 40px;
@@ -46,10 +49,11 @@
 <body>
 
   <h1>Goats Media</h1>
-  <p>We are currently transferring the site to new hardware. Better stability, same Goats.</p>
-  <p>If you need anything or have a content request, hop into our Discord general channel.</p>
-  <p>If you are not in the Discord yet, well, you should have joined.</p>
-  <p>  -Goats</p>
+  <p>We are moving the site to new hardware so things will run smoother once we are done.</p>
+  <p>If you need to request something in the meantime, you can use this temporary link:</p>
+  <p><a href="http://fzb89ed.glddns.com:1000/" target="_blank">http://fzb89ed.glddns.com:1000/</a></p>
+  <p>You may get an SSL warning. Just tell your browser to proceed. It is only judging you a little.</p>
+  <p>And if you found this page without being in our Discord, that is some top tier detective work. Seriously, we are impressed.</p>
 
   <div class="spinner"></div>
 
